fixed nav overflow hidden on mobile

--- a/compass/sass/styles.scss
+++ b/compass/sass/styles.scss
@@ -79,7 +79,7 @@ ul.topnav li.icon {
 	font-family: $serif;
 	line-height: 15px;
 	border-bottom: $seafoam solid 1px;
-	overflow: hidden;
+	// overflow: hidden;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
